--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "electron": "^23.2.1",
     "fs": "^0.0.1-security",
+    "moment": "^2.29.4",
     "path": "^0.12.7"
   }
 }
