--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/ItzLukynek/Work-Attendance#readme",
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "electron": "^23.2.1",
     "electron-localshortcut": "^3.2.1",
     "fs": "^0.0.1-security",
