--- a/backend/json/config.json
+++ b/backend/json/config.json
@@ -1,1 +1,6 @@
-[{"key":"$2b$10$5k0FszbNMCCGm4XNMclVp.zPhQhrmXwugRIsvxOuVRn0aUuQB1qY."}]
+[
+    {
+        "key": "$2b$10$5k0FszbNMCCGm4XNMclVp.zPhQhrmXwugRIsvxOuVRn0aUuQB1qY.",
+        "FilePath": "C:/Users/Luk/OneDrive - SPŠE a VOŠ Pardubice/Dokumenty/MW/Work-Attendance/Files/"
+    }
+]
