--- a/package.json
+++ b/package.json
@@ -19,10 +19,18 @@
   "homepage": "https://github.com/ItzLukynek/Work-Attendance#readme",
   "dependencies": {
     "bcrypt": "^5.1.0",
+    "dialog": "^0.3.1",
     "electron": "^23.2.1",
     "electron-localshortcut": "^3.2.1",
+    "exceljs": "^4.3.0",
     "fs": "^0.0.1-security",
+    "json2csv": "^6.0.0-alpha.2",
+    "jsonexport": "^3.2.0",
     "moment": "^2.29.4",
-    "path": "^0.12.7"
+    "papaparse": "^5.4.1",
+    "path": "^0.12.7",
+    "xlsx": "^0.18.5",
+    "xlsx-populate": "^1.21.0",
+    "xlsx-style": "^0.8.13"
   }
 }
